# spbu_modern_programming

./: .gitignore  CMakeLists.txt  README.md  build.sh
bubble_sort/: main.cpp  run_bubble_sort.sh
doubly_linked_list/: CMakeLists.txt
doubly_linked_list/src/: CMakeLists.txt  doubly_linked_list.cpp
doubly_linked_list/tests/: CMakeLists.txt  templates_list.cpp  test_doubly_linked_list.cpp
long_numbers/: CMakeLists.txt  TODO
long_numbers/src/: CMakeLists.txt  main.cpp  main.hpp
long_numbers/tests/: CMakeLists.txt  test_long_numbers.cpp
obuchaika/: main.cpp  menu.hpp  menu_functions.cpp  menu_functions.hpp  menu_items.cpp  run_obuchaika.sh
unit_test_example/: CMakeLists.txt
unit_test_example/tests/: CMakeLists.txt  test_bubble.cpp
vector/: CMakeLists.txt
vector/src/: CMakeLists.txt  vector.cpp
vector/tests/: CMakeLists.txt  templates_vector.cpp  test_vector.cpp
